# bls-stats

./: .gitignore  404.html  README.md  bls-stats.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.ipynb  sitemap.xml
cli/: index.html
concepts/pipeline/: index.html
concepts/release-detection/: index.html
concepts/storage/: index.html
concepts/vintage-model/: index.html
data/qcew/: qcew_estimates.parquet
docs/: cli.md  getting-started.md  index.md
docs/api/: bls.md  config.md  download.md  index.md  release-dates.md  series.md
docs/concepts/: pipeline.md  release-detection.md  storage.md  vintage-model.md
docs/reference/: cli.md  core.md  engines.md  enrich.md  index.md  pipeline.md  registry.md  releases.md  storage.md  vintage.md
docs/stylesheets/: extra.css
getting-started/: index.html
reference/: index.html
reference/cli/: index.html
reference/core/: index.html
reference/engines/: index.html
reference/enrich/: index.html
reference/pipeline/: index.html
reference/registry/: index.html
reference/releases/: index.html
reference/storage/: index.html
reference/vintage/: index.html
scripts/: capture_fixtures.py
search/: search_index.json
specs/: audit_5-7-26.md  bls-stats-architecture.md  deferred_items.md
specs.md/: bls-stats.md
specs/completed/: audit_5-7-26.md  bls-stats-architecture.md
specs/plans/: 1-bls-stats-architecture.md  2-audit_5-7-26.md
src/bls_stats/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  registry.py
tests/: test_bed.py  test_ces.py  test_cli.py  test_feed.py  test_fetch.py  test_jolts.py  test_periods.py  test_pipeline.py  test_programs.py  test_qcew.py  test_registry.py  test_release_config.py  test_sae.py  test_scraper.py  test_series_builder.py  test_smoke.py  test_vintage_replay.py
tests/core/: test_config.py  test_http.py  test_periods.py  test_series_id.py
tests/engines/: test_api_v2.py  test_ep.py  test_labstat.py  test_oews.py  test_qcew.py
tests/enrich/: test_cps.py
tests/releases/: test_calendar.py  test_feeds.py  test_profiles.py
tests/storage/: test_delta.py  test_doctor.py  test_reads.py
(+47 files in other folders)
