[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bls-stats"
version = "0.1.0"
description = "BLS release-dates and download pipeline for QCEW, CES, SAE, BED, and JOLTS"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "httpx",
    "beautifulsoup4",
    "feedparser",
    "click",
    "python-dotenv",
]

[project.scripts]
bls-stats = "bls_stats.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/bls_stats"]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bls_stats --cov-report=term-missing"

[tool.coverage.run]
source = ["bls_stats"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "raise RuntimeError\\(\"unreachable\"\\)",
]
