[project]
name = "bls-stats"
version = "0.1.0"
description = "Vintage-aware BLS data downloads and S3-compatible object-store ingest"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "deltalake>=0.19",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "lxml>=5.0",
    "beautifulsoup4>=4.12",
    "fastexcel>=0.11",
    "boto3>=1.35",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "xlsxwriter>=3.2"]

[project.scripts]
bls-stats = "bls_stats.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bls_stats"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-m 'not network and not slow'"
testpaths = ["tests"]
markers = [
    "network: hits live BLS/Census servers (nightly/manual only)",
    "slow: full-size files or long-running",
    "real_store: needs a live S3/MinIO endpoint (self-skips without AWS_ENDPOINT_URL)",
]
